--- a/src-frontend/app/lobby/lobby.component.html
+++ b/src-frontend/app/lobby/lobby.component.html
@@ -81,38 +81,44 @@
   <div class="pane-row">
     <div class="pane" id="chat">
       <div class="pane-content">
-        <div class="messages">
-          <div class="message">
-            <div class="name">
-              Guest
-            </div>
-            <div class="message-content">
-              Hola
-            </div>
-          </div>
-          <div class="message">
-            <div class="name">
-              Guest
-            </div>
-            <div class="message-content">
-              Ut non bibendum velit. Phasellus non vulputate ipsum, sit amet pellentesque nulla.
-              Maecenas at turpis volutpat, mattis nunc eu, gravida purus. In sit amet dui leo.
-            </div>
-          </div>
-          <div class="message">
-            <div class="name">
-              xXxB3n_tha_GodxXx
-            </div>
-            <div class="message-content">
-              Hey
-            </div>
-          </div>
-        </div>
-        <div class="input-container">
-          <input type="text"/>
-        </div>
+        <dmn-chat></dmn-chat>
       </div>
     </div>
+
+    <!--<div class="pane" id="chat">-->
+      <!--<div class="pane-content">-->
+        <!--<div class="messages">-->
+          <!--<div class="message">-->
+            <!--<div class="name">-->
+              <!--Guest-->
+            <!--</div>-->
+            <!--<div class="message-content">-->
+              <!--Hola-->
+            <!--</div>-->
+          <!--</div>-->
+          <!--<div class="message">-->
+            <!--<div class="name">-->
+              <!--Guest-->
+            <!--</div>-->
+            <!--<div class="message-content">-->
+              <!--Ut non bibendum velit. Phasellus non vulputate ipsum, sit amet pellentesque nulla.-->
+              <!--Maecenas at turpis volutpat, mattis nunc eu, gravida purus. In sit amet dui leo.-->
+            <!--</div>-->
+          <!--</div>-->
+          <!--<div class="message">-->
+            <!--<div class="name">-->
+              <!--xXxB3n_tha_GodxXx-->
+            <!--</div>-->
+            <!--<div class="message-content">-->
+              <!--Hey-->
+            <!--</div>-->
+          <!--</div>-->
+        <!--</div>-->
+        <!--<div class="input-container">-->
+          <!--<input type="text"/>-->
+        <!--</div>-->
+      <!--</div>-->
+    <!--</div>-->
     <div class="pane" id="game-info">
       <div class="pane-content">
         <div class="game-info-header">
