--- a/src-frontend/app/lobby/lobby.component.css
+++ b/src-frontend/app/lobby/lobby.component.css
@@ -2,17 +2,16 @@
   position: relative;
   z-index: 2;
   display: flex;
-  height: 100%;
   flex-direction: column;
+  height: 100%;
 }
 .pane-row {
   display: flex;
-  width: 100%;
+  align-items: stretch;
   height: 50%;
 }
 .pane {
   width: 50%;
-  height: 100%;
   padding: 10px;
   position: relative;
 }
