--- a/src-frontend/app/lobby/lobby.component.css
+++ b/src-frontend/app/lobby/lobby.component.css
@@ -4,11 +4,26 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  background: url('../../assets/bg.jpg') center center;
+  background-size: cover;
+}
+.lobby-panes::after {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  pointer-events: none;
+  background: rgba(0, 0, 0, 0.3);
+  z-index: 1;
 }
 .pane-row {
   display: flex;
   align-items: stretch;
   height: 50%;
+  z-index: 3;
 }
 .pane {
   width: 50%;
