--- a/src-frontend/app/game/game.component.html
+++ b/src-frontend/app/game/game.component.html
@@ -1,4 +1,103 @@
 <div id="game">
-  This is where the game will be
+  <div id="board">
+    <div id="left-bar">
+      <div id="stats">
+        <div class="stat">
+          <span class="stat-label">Actions:</span> 4
+        </div>
+        <div class="stat">
+          <span class="stat-label">Buys:</span> 3
+        </div>
+        <div class="stat">
+          <span class="stat-label">Gold:</span> 0
+        </div>
+      </div>
+      <div id="cart">
+      </div>
+    </div>
+    <div id="piles">
+      <div class="pile-row">
+        <div class="pile"><img src="../../assets/village.jpg"></div>
+        <div class="pile"><img src="../../assets/village.jpg"></div>
+        <div class="pile"><img src="../../assets/village.jpg"></div>
+        <div class="pile"><img src="../../assets/village.jpg"></div>
+        <div class="pile"><img src="../../assets/village.jpg"></div>
+        <div class="pile"><img src="../../assets/village.jpg"></div>
+      </div>
+      <div class="pile-row">
+        <div class="pile"><img src="../../assets/village.jpg"></div>
+        <div class="pile"><img src="../../assets/village.jpg"></div>
+        <div class="pile"><img src="../../assets/village.jpg"></div>
+        <div class="pile"><img src="../../assets/village.jpg"></div>
+        <div class="pile"><img src="../../assets/village.jpg"></div>
+        <div class="pile"><img src="../../assets/village.jpg"></div>
+      </div>
+      <div class="pile-row">
+        <div class="pile"><img src="../../assets/village.jpg"></div>
+        <div class="pile"><img src="../../assets/village.jpg"></div>
+        <div class="pile"><img src="../../assets/village.jpg"></div>
+        <div class="pile"><img src="../../assets/village.jpg"></div>
+        <div class="pile"><img src="../../assets/village.jpg"></div>
+        <div class="pile"><img src="../../assets/village.jpg"></div>
+      </div>
+    </div>
+    <div id="right-bar-container">
+      <div id="right-bar">
+        <div class="turns">
+          <div class="turn">
+            <div class="current-turn-message">Current Turn</div>
+            <div class="turn-info">
+              <div class="name">Ben</div>
+              <div class="num-cards">3 Cards</div>
+            </div>
+          </div>
+          <div class="turn">
+            <div class="current-turn-message">Current Turn</div>
+            <div class="turn-info">
+              <div class="name">Ben</div>
+              <div class="num-cards">3 Cards</div>
+            </div>
+          </div>
+          <div class="turn current-turn">
+            <div class="current-turn-message">Current Turn</div>
+            <div class="turn-info">
+              <div class="name">Ben</div>
+              <div class="num-cards">3 Cards</div>
+            </div>
+          </div>
+          <div class="turn">
+            <div class="current-turn-message">Current Turn</div>
+            <div class="turn-info">
+              <div class="name">Ben</div>
+              <div class="num-cards">3 Cards</div>
+            </div>
+          </div>
+          <div class="chat-container">
+            <dmn-chat></dmn-chat>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div id="hud">
+    <div class="left">
+      <div class="discard">
+
+      </div>
+      <div class="played">
+
+      </div>
+    </div>
+    <div class="hand-container">
+      <div class="hand">
+        <div class="card"><img src="../../assets/village.jpg"></div>
+        <div class="card"><img src="../../assets/village.jpg"></div>
+        <div class="card"><img src="../../assets/village.jpg"></div>
+        <div class="card"><img src="../../assets/village.jpg"></div>
+        <div class="card"><img src="../../assets/village.jpg"></div>
+      </div>
+    </div>
+    <div class="deck"></div>
+  </div>
 </div>
 
