--- a/src-frontend/app/game/game.component.css
+++ b/src-frontend/app/game/game.component.css
@@ -1,3 +1,117 @@
-html {
-  background: #338833;
-}
+#game {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  background: url("../../assets/parchment-002.jpg") center center;
+  background-size: cover;
+  /* ----------- HUD ------------- */ }
+  #game #board {
+    flex-grow: 1;
+    display: flex;
+    /* -------- LEFT BAR --------- */
+    /* ---------- PILES ---------- */
+    /* -------RIGHT BAR ---------- */ }
+    #game #board #left-bar {
+      width: 220px;
+      display: flex;
+      flex-direction: column;
+      padding-bottom: 20px; }
+      #game #board #left-bar #stats {
+        padding: 20px 80px 20px 20px;
+        font-size: 18px;
+        font-weight: 300;
+        color: white; }
+        #game #board #left-bar #stats .stat {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          margin-bottom: 12px; }
+          #game #board #left-bar #stats .stat .stat-label {
+            font-weight: bold;
+            text-transform: uppercase;
+            font-size: 0.8em; }
+      #game #board #left-bar #cart {
+        background: rgba(0, 0, 0, 0.5);
+        flex-grow: 1;
+        margin-right: 60px;
+        border-top-right-radius: 8px;
+        border-bottom-right-radius: 8px; }
+    #game #board #piles {
+      flex-grow: 1;
+      padding: 30px; }
+      #game #board #piles .pile-row {
+        display: flex;
+        justify-content: space-around;
+        margin-bottom: 28px; }
+        #game #board #piles .pile-row .pile {
+          width: 100px;
+          border-radius: 3px;
+          background: black;
+          padding: 3px;
+          padding-bottom: 0px; }
+          #game #board #piles .pile-row .pile img {
+            width: 100%;
+            height: auto; }
+    #game #board #right-bar-container {
+      width: 320px;
+      padding: 12px; }
+      #game #board #right-bar-container #right-bar {
+        background: white;
+        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12), 0 1px 3px rgba(0, 0, 0, 0.24); }
+        #game #board #right-bar-container #right-bar .turns {
+          display: flex;
+          flex-direction: column; }
+          #game #board #right-bar-container #right-bar .turns .turn {
+            padding: 18px 14px;
+            border-bottom: 1px solid #DDD; }
+            #game #board #right-bar-container #right-bar .turns .turn .current-turn-message {
+              display: none; }
+            #game #board #right-bar-container #right-bar .turns .turn.current-turn {
+              display: flex;
+              flex-direction: column;
+              justify-content: space-between;
+              color: white;
+              height: 100px;
+              background: #555ec6;
+              order: -1; }
+              #game #board #right-bar-container #right-bar .turns .turn.current-turn .current-turn-message {
+                display: block;
+                text-transform: uppercase;
+                font-size: 0.9em;
+                margin-bottom: 12px; }
+            #game #board #right-bar-container #right-bar .turns .turn.current-turn .turn-info {
+              font-weight: 300; }
+            #game #board #right-bar-container #right-bar .turns .turn .turn-info {
+              display: flex;
+              justify-content: space-between; }
+  #game #hud {
+    height: 200px;
+    display: flex;
+    align-items: stretch;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12), 0 1px 3px rgba(0, 0, 0, 0.24); }
+    #game #hud .left {
+      background: pink;
+      width: 200px; }
+    #game #hud .hand-container {
+      flex-grow: 1;
+      display: flex;
+      justify-content: center;
+      align-items: center; }
+      #game #hud .hand-container .hand {
+        display: inline-block; }
+        #game #hud .hand-container .hand .card {
+          margin: 0 12px; }
+    #game #hud .deck {
+      background: blue;
+      width: 200px; }
+
+.card {
+  width: 100px;
+  display: inline-block;
+  padding: 3px 3px 0px;
+  border-radius: 3px;
+  background: black; }
+  .card img {
+    width: 100%; }
+
+/*# sourceMappingURL=game.component.css.map */
