--- a/src-frontend/app/lobby/lobby.component.html
+++ b/src-frontend/app/lobby/lobby.component.html
@@ -129,7 +129,7 @@
             </div>
           </div>
           <div class="join-game">
-            <button>Join Game</button>
+            <button (click)="join()">Join Game</button>
           </div>
           <div class="cards">
             <div class="card"></div>
@@ -144,7 +144,6 @@
             <div class="card"></div>
           </div>
         </div>
-
       </div>
     </div>
   </div>
