--- a/src-frontend/app/lobby/lobby.component.html
+++ b/src-frontend/app/lobby/lobby.component.html
@@ -14,16 +14,9 @@
             <div class="game-name">{{ pending.name }}</div>
             <div class="players">{{ pending.users.length }} / {{ pending.maxusers }}</div>
             <div class="cards">
-              <div class="card"></div>
-              <div class="card"></div>
-              <div class="card"></div>
-              <div class="card"></div>
-              <div class="card"></div>
-              <div class="card"></div>
-              <div class="card"></div>
-              <div class="card"></div>
-              <div class="card"></div>
-              <div class="card"></div>
+              <div class="card" *ngFor="let card of pending.actioncardids">
+                <img src="../../assets/card{{ card }}.jpg">
+              </div>
             </div>
           </li>
         </ul>
@@ -130,18 +123,12 @@
           </div>
           <div class="join-game">
             <button (click)="join()">Join Game</button>
+            <button (click)="leave()">Leave Game</button>
           </div>
           <div class="cards">
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
+            <div class="card" *ngFor="let card of selectedGame.actioncardids">
+              <img src="../../assets/card{{ card }}.jpg">
+            </div>
           </div>
         </div>
       </div>
