--- a/src-frontend/app/game/game.component.css
+++ b/src-frontend/app/game/game.component.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  background: url("../../assets/parchment-002.jpg") center center;
+  background: url("../../assets/bg_blur.png") center center;
   background-size: cover;
   /* ----------- HUD ------------- */ }
   #game #board {
