--- a/src-frontend/app/game/game.component.html
+++ b/src-frontend/app/game/game.component.html
@@ -17,28 +17,48 @@
     </div>
     <div id="piles">
       <div class="pile-row">
-        <div class="pile"><img src="../../assets/village.jpg"></div>
-        <div class="pile"><img src="../../assets/village.jpg"></div>
-        <div class="pile"><img src="../../assets/village.jpg"></div>
-        <div class="pile"><img src="../../assets/village.jpg"></div>
-        <div class="pile"><img src="../../assets/village.jpg"></div>
-        <div class="pile"><img src="../../assets/village.jpg"></div>
+        <div class="card">
+          <img src="../../assets/cardimage0.jpg">
+          <div class="card-label">
+            <div class="name">Village</div>
+            <div class="description">
+              +1 Card<br/>
+              +2 Actions
+            </div>
+          </div>
+          <div class="card-footer">
+            <div class="gold">2</div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-title">
+            Market
+          </div>
+          <img src="../../assets/cardimage0.jpg">
+          <div class="card-label">
+            Market info
+          </div>
+        </div>
+        <div class="card"><img src="../../assets/cardimage0.jpg">Market</div>
+        <div class="card"><img src="../../assets/cardimage0.jpg"></div>
+        <div class="card"><img src="../../assets/cardimage0.jpg"></div>
+        <div class="card"><img src="../../assets/cardimage0.jpg"></div>
       </div>
       <div class="pile-row">
-        <div class="pile"><img src="../../assets/village.jpg"></div>
-        <div class="pile"><img src="../../assets/village.jpg"></div>
-        <div class="pile"><img src="../../assets/village.jpg"></div>
-        <div class="pile"><img src="../../assets/village.jpg"></div>
-        <div class="pile"><img src="../../assets/village.jpg"></div>
-        <div class="pile"><img src="../../assets/village.jpg"></div>
+        <div class="card"><img src="../../assets/cardimage0.jpg"></div>
+        <div class="card"><img src="../../assets/cardimage0.jpg"></div>
+        <div class="card"><img src="../../assets/cardimage0.jpg"></div>
+        <div class="card"><img src="../../assets/cardimage0.jpg"></div>
+        <div class="card"><img src="../../assets/cardimage0.jpg"></div>
+        <div class="card"><img src="../../assets/cardimage0.jpg"></div>
       </div>
       <div class="pile-row">
-        <div class="pile"><img src="../../assets/village.jpg"></div>
-        <div class="pile"><img src="../../assets/village.jpg"></div>
-        <div class="pile"><img src="../../assets/village.jpg"></div>
-        <div class="pile"><img src="../../assets/village.jpg"></div>
-        <div class="pile"><img src="../../assets/village.jpg"></div>
-        <div class="pile"><img src="../../assets/village.jpg"></div>
+        <div class="card"><img src="../../assets/cardimage0.jpg"></div>
+        <div class="card"><img src="../../assets/cardimage0.jpg"></div>
+        <div class="card"><img src="../../assets/cardimage0.jpg"></div>
+        <div class="card"><img src="../../assets/cardimage0.jpg"></div>
+        <div class="card"><img src="../../assets/cardimage0.jpg"></div>
+        <div class="card"><img src="../../assets/cardimage0.jpg"></div>
       </div>
     </div>
     <div id="right-bar-container">
