--- a/src-frontend/app/game/game.component.scss
+++ b/src-frontend/app/game/game.component.scss
@@ -70,18 +70,24 @@
         justify-content: space-around;
         margin-bottom: 28px;
 
-        .pile {
-          width: 100px;
-          border-radius: 3px;
-          background: black;
-          padding: 3px;
-          padding-bottom: 0px;
-
-          img {
-            width: 100%;
-            height: auto;
-          }
+        .card {
+          width: 120px;
+          font-size: 0;
         }
+
+
+        //.card {
+        //  width: 100px;
+        //  border-radius: 3px;
+        //  background: black;
+        //  padding: 3px;
+        //  padding-bottom: 0px;
+        //
+        //  img {
+        //    width: 100%;
+        //    height: auto;
+        //  }
+        //}
       }
     }
 
@@ -181,11 +187,55 @@
 .card {
   width: 100px;
   display: inline-block;
-  padding: 3px 3px 0px;
   border-radius: 3px;
-  background: black;
+  box-shadow: 0 1px 2px rgba(black, 0.12), 0 1px 3px rgba(black, 0.24);
+  //padding: 3px 3px 0px;
+  //background: black;
+  overflow: hidden;
+
+  .card-label {
+    font-size: 14px;
+    font-weight: 300;
+    padding: 8px;
+    color: #222;
+    background: rgba(white, 0.75);
+
+    .name {
+      margin-bottom: 8px;
+      text-transform: uppercase;
+    }
+
+    .description {
+      font-size: 0.85em;
+    }
+
+  }
+
+  .card-footer {
+    background: rgba(white, 0.75);
+    height: 30px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+
+    .gold {
+      height: 22px;
+      width: 22px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      margin: 0 8px;
+      border-radius: 10px;
+      border: 1px solid #997733;
+      font-size: 12px;
+      font-weight: 100;
+    }
+  }
 
   img {
     width: 100%;
+    position: relative;
+
   }
 }
