--- a/src-frontend/app/lobby/lobby.component.css
+++ b/src-frontend/app/lobby/lobby.component.css
@@ -45,7 +45,7 @@
   color: white;
   font-weight: 100;
   font-size: 5em;
-  text-shadow: 0px 0px 10px rgba(0, 0, 0, 1);
+  text-shadow: 0 0 10px rgba(0, 0, 0, 1);
   text-align: center;
   text-transform: uppercase;
 }
