--- a/src-frontend/app/game/game.component.html
+++ b/src-frontend/app/game/game.component.html
@@ -99,13 +99,23 @@
       </div>
     </div>
   </div>
+  <div id="end-phase-row">
+    <button>End Phase</button>
+  </div>
   <div id="hud">
     <div class="left">
       <div class="discard">
-
+        <div class="card">
+          <div class="counter-container">
+            <div class="counter">12</div>
+          </div>
+          <img src="../../assets/cardback.jpg">
+        </div>
       </div>
       <div class="played">
-
+        <div class="card">
+          <img src="../../assets/village.jpg">
+        </div>
       </div>
     </div>
     <div class="hand-container">
@@ -117,7 +127,14 @@
         <div class="card"><img src="../../assets/village.jpg"></div>
       </div>
     </div>
-    <div class="deck"></div>
+    <div class="deck">
+      <div class="card">
+        <div class="counter-container">
+          <div class="counter">12</div>
+        </div>
+        <img src="../../assets/cardback.jpg">
+      </div>
+    </div>
   </div>
 </div>
 
