got a good structure for the creation page up

--- a/src-frontend/app/creation-page/creation-page.component.css
+++ b/src-frontend/app/creation-page/creation-page.component.css
@@ -112,7 +112,12 @@
   width: 300px;
 }
 
-.image {
+#blowUpImg {
   width: 100%;
+  height: auto;
+}
+
+.card {
+  width: 70px;
   height: auto;
 }
