--- a/src-frontend/app/creation-page/creation-page.component.html
+++ b/src-frontend/app/creation-page/creation-page.component.html
@@ -59,10 +59,75 @@
     </div>
     <div class="pane-row">
       <div class="pane" id="cards">
-
+        <table class="available-cards">
+          <tr>
+            <td>
+              <img class="card" src="../../assets/card0.jpg" />
+            </td>
+            <td>
+              <img class="card" src="../../assets/card1.jpg" />
+            </td>
+            <td>
+              <img class="card" src="../../assets/card2.jpg" />
+            </td>
+            <td>
+              <img class="card" src="../../assets/card3.jpg" />
+            </td>
+            <td>
+              <img class="card" src="../../assets/card4.jpg" />
+            </td>
+            <td>
+              <img class="card" src="../../assets/card5.jpg" />
+            </td>
+            <td>
+              <img class="card" src="../../assets/card6.jpg" />
+            </td>
+            <td>
+              <img class="card" src="../../assets/card7.jpg" />
+            </td>
+            <td>
+              <img class="card" src="../../assets/card8.jpg" />
+            </td>
+            <td>
+              <img class="card" src="../../assets/card9.jpg" />
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <img class="card" src="../../assets/card10.jpg" />
+            </td>
+            <td>
+              <img class="card" src="../../assets/card11.jpg" />
+            </td>
+            <td>
+              <img class="card" src="../../assets/card12.jpg" />
+            </td>
+            <td>
+              <img class="card" src="../../assets/card13.jpg" />
+            </td>
+            <td>
+              <img class="card" src="../../assets/card14.jpg" />
+            </td>
+            <td>
+              <img class="card" src="../../assets/card15.jpg" />
+            </td>
+            <td>
+              <img class="card" src="../../assets/card16.jpg" />
+            </td>
+            <td>
+              <img class="card" src="../../assets/card17.jpg" />
+            </td>
+            <td>
+              <img class="card" src="../../assets/card18.jpg" />
+            </td>
+            <td>
+              <img class="card" src="../../assets/card19.jpg" />
+            </td>
+          </tr>
+        </table>
       </div>
       <div class="pane" id="blowUp">
-        <img class="image" src="../../assets/card0.jpg" />
+        <img id="blowUpImg" class="image" src="../../assets/card0.jpg" style="visibility: hidden;"/>
       </div>
     </div>
   </form>
