--- a/src-frontend/app/game/game.component.html
+++ b/src-frontend/app/game/game.component.html
@@ -3,14 +3,14 @@
     <div id="left-bar">
       <div id="stats">
         <div class="stat">
-          <span class="stat-label">Actions:</span> {{ game.getBuys() }}
+          <span class="stat-label">Actions:</span> {{ game.getActions() }}
         </div>
-        <!--<div class="stat">-->
-          <!--<span class="stat-label">Buys:</span> {{ game.buys | async }}-->
-        <!--</div>-->
-        <!--<div class="stat">-->
-          <!--<span class="stat-label">Gold:</span> {{ game.gold | async }}-->
-        <!--</div>-->
+        <div class="stat">
+          <span class="stat-label">Buys:</span> {{ game.getBuys() }}
+        </div>
+        <div class="stat">
+          <span class="stat-label">Gold:</span> {{ game.getGold() }}
+        </div>
       </div>
       <div id="cart">
       </div>
