Get rid of three dots

--- a/src-frontend/app/game/game.component.html
+++ b/src-frontend/app/game/game.component.html
@@ -3,13 +3,13 @@
     <div id="left-bar">
       <div id="stats">
         <div class="stat">
-          <span class="stat-label">Actions:</span> {{ game.getActions() }}
+          <span class="stat-label">Actions:</span> {{ game.actions }}
         </div>
         <div class="stat">
-          <span class="stat-label">Buys:</span> {{ game.getBuys() }}
+          <span class="stat-label">Buys:</span> {{ game.buys }}
         </div>
         <div class="stat">
-          <span class="stat-label">Gold:</span> {{ game.getGold() }}
+          <span class="stat-label">Gold:</span> {{ game.gold }}
         </div>
       </div>
       <div id="cart">
