--- a/src-frontend/app/creation-page/creation-page.component.css
+++ b/src-frontend/app/creation-page/creation-page.component.css
@@ -23,11 +23,9 @@
   z-index: 2;
   position: relative;
   padding: 10px;
-}
-
-.pane-row#form-row {
   display: flex;
   align-items: stretch;
+  justify-content: space-between;
 }
 
 .pane {
@@ -61,8 +59,6 @@
   align: right;
   transition: background 0.15s;
   font-size: 1em;
-  /*border: none;*/
-  /*box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12), 0 1px 3px rgba(0, 0, 0, 0.24);*/
 }
 
 .pane#chat .pane-content {
@@ -70,13 +66,20 @@
   border: 1px solid #BBB;
   color: white;
   position: relative;
-  width: 300px;
+  width: 400px;
   height: 100%;
+  max-height: 175px;
 }
 
 .button-container button {
   margin: 0 10px;
   display: inline-block;
+}
+
+.available-cards {
+  display: flex;
+  align-items: stretch;
+  justify-content: space-between;
 }
 
 .pane#blowUp {
