--- a/src-frontend/app/creation-page/creation-page.component.html
+++ b/src-frontend/app/creation-page/creation-page.component.html
@@ -1,5 +1,5 @@
 <div class="creation-container">
-  <div class="pane-row">
+  <div class="header-row">
     <div id="header"><h1>Create New Game</h1></div>
   </div>
   <form method="POST">
