--- a/src-frontend/app/game/game.component.html
+++ b/src-frontend/app/game/game.component.html
@@ -16,6 +16,25 @@
       </div>
     </div>
     <div id="piles">
+
+      <!--<div class="pile-row">-->
+        <!--<div class="card" *ngfor="let card of firstRow">-->
+
+        <!--</div>-->
+      <!--</div>-->
+      <!--<div class="pile-row">-->
+        <!--<div class="card" *ngfor="let card of cards">-->
+
+        <!--</div>-->
+      <!--</div>-->
+      <!--<div class="pile-row">-->
+        <!--<div class="card" *ngfor="let card of cards">-->
+
+        <!--</div>-->
+      <!--</div>-->
+
+
+
       <div class="pile-row">
         <div class="card">
           <img src="../../assets/cardimage0.jpg">
