--- a/src-frontend/app/creation-page/creation-page.component.html
+++ b/src-frontend/app/creation-page/creation-page.component.html
@@ -65,17 +65,17 @@
       <div class="pane" id="cards">
         <div class="card-row">
           <div *ngFor="let i of [0,1,2,3,4,5,6,7,8,9]" class="card">
-            <img id="card{{ i }}" class="cardImg" src="../../assets/card{{ i }}.jpg" />
+            <img id="card{{ i }}" class="cardImg" src="../../assets/card{{ i }}.jpg" (mouseenter)="entered('card' + i)" (mouseleave)="left()" (click)="clicked('card' + i)" />
           </div>
         </div>
         <div class="card-row">
           <div *ngFor="let j of [10,11,12,13,14,15,16,17,18,19]" class="card">
-            <img id="card{{ j }}" class="cardImg" src="../../assets/card{{ j }}.jpg" />
+            <img id="card{{ j }}" class="cardImg" src="../../assets/card{{ j }}.jpg" (mouseenter)="entered('card' + j)" (mouseleave)="left()" (click)="clicked('card' + j)" />
           </div>
         </div>
       </div>
       <div class="pane" id="blowUp">
-        <img id="blowUpImg" class="image" src="../../assets/card0.jpg" style="visibility: hidden;"/>
+        <img id="blowUpImg" src="../../assets/card0.jpg" style="visibility: hidden;"/>
       </div>
     </div>
   </form>
